# clozer

./: .gitignore  Cargo.toml  README.md  prek.toml
.clinerules/: 0-overview.md  1-architecture.md  10-common-operations.md  2-models.md  3-registry.md  4-persistence.md  5-ui-patterns.md  6-api-design.md  7-logging.md  8-git-conventions.md  9-comments.md  dev-git.md  dev-persistence.md  dev-registry.md
.kilocode/rules/: 0-style.md  1-logging.md  2-error-handling.md  3-git.md  4-testing.md  arch-layers.md  arch-modules.md  dev-code-style.md  dev-error-handling.md  dev-git.md  dev-logging.md  dev-models.md  dev-persistence.md  dev-registry.md  dev-testing.md  dev-ui.md  overview.md  quick-start.md  ref-api.md  ref-commands.md
create-sample-db/: main.rs
inspect-db/: main.rs
src/: app.rs  assets.rs  lib.rs  main.rs  message.rs  window.rs
src/config/: cli.rs  constants.rs  env.rs  error.rs  file.rs  mod.rs
src/config/file/: ai.rs  general.rs  mod.rs
src/dictionary/: mod.rs
src/dictionary/models/: entry.rs  mod.rs
src/dictionary/provider/: error.rs  free_dictionary.rs  mod.rs
src/i18n/: locale.rs  manager.rs  mod.rs  translations.rs
src/import/: error.rs  mod.rs
src/import/mdx/: line_iter.rs  mod.rs  parser.rs
src/models/: cloze.rs  meaning.rs  mod.rs  model.rs  provider.rs  tag.rs  types.rs  word.rs
src/persistence/: dto.rs  mod.rs
src/persistence/db/: clozes.rs  core.rs  meanings.rs  mod.rs  models.rs  providers.rs  queue.rs  tags.rs  words.rs
src/persistence/dto/: cloze.rs  meaning.rs  mod.rs  model.rs  provider.rs  queue.rs  tag.rs  word.rs
src/query/: ast.rs  engine.rs  mod.rs  parse.rs
src/registry/: cloze.rs  dirty.rs  meaning.rs  mod.rs  model.rs  provider.rs  queue.rs  tag.rs  word.rs
src/state/: data.rs  generator.rs  mod.rs  model.rs  queue.rs  selection.rs  ui.rs
src/ui/: app.rs  compositor.rs  design_tokens.rs  message.rs  mod.rs  nav.rs  notification.rs  queue.rs  sidebar.rs  state.rs  status_bar.rs  theme.rs  words.rs
src/ui/components/: button.rs  checkbox.rs  container.rs  detail.rs  menu.rs  mod.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  svg.rs  text_input.rs  toggler.rs
src/ui/layout/: adaptive.rs  breakpoint.rs  grid.rs  mod.rs  mode.rs  waterfall.rs
src/ui/main_window/: message.rs  mod.rs  nav.rs  state.rs
src/ui/practice/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/queue/: handlers.rs  mod.rs  (+4 more)
(+83 files in other folders)
