[package]
name = "clozer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
either = "1.15.0"
typed-builder = "0.23.2"
derive_more = { version = "2.1.1", features = ["full"] }
rig-core = "0.30.0"
reqwest = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
langtag = "1.1.0"
fancy-regex = "0.17.0"
once_cell = "1.21.3"
